flux/apps/hoyeslab/media/jellyseerr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseerr
  namespace: media
spec:
  ingressClassName: nginx
  rules:
    - host: jellyseerr.hoyes.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyseerr
                port:
                  name: http
  tls:
    - hosts:
        - jellyseerr.hoyes.dev
      secretName: hoyes-dev-tls
